src/bugzillaintegration/reportassistantpages_base.cpp
@@ -135,9 +135,9 @@ BugAwarenessPage::BugAwarenessPage(ReportAssistantDialog * parent)
                                      "What I was doing when the application \"%1\" crashed",
                                          DrKonqi::crashedApplication()->name()));
 
-    connect(ui.m_rememberGroup, &QButtonGroup::idPressed, this, &BugAwarenessPage::updateCheckBoxes);
+    connect(ui.m_rememberGroup, &QButtonGroup::idClicked, this, &BugAwarenessPage::updateCheckBoxes);
     // Also listen to toggle so radio buttons are covered.
-    connect(ui.m_rememberGroup, &QButtonGroup::idPressed, this, &BugAwarenessPage::updateCheckBoxes);
+    connect(ui.m_rememberGroup, &QButtonGroup::idClicked, this, &BugAwarenessPage::updateCheckBoxes);
 
     ui.m_appSpecificDetailsExamplesWidget->setVisible(
                 reportInterface()->appDetailsExamples()->hasExamples());
