src/bugzillaintegration/reportassistantpages_bugzilla_duplicates.cpp
@@ -999,9 +999,9 @@ BugzillaReportConfirmationDialog::BugzillaReportConfirmationDialog(int bugNumber
     connect(ui.buttonGroupProceed, SIGNAL(buttonClicked(int)), this, SLOT(checkProceed()));
     connect(ui.buttonGroupProceedQuestion, SIGNAL(buttonClicked(int)), this, SLOT(checkProceed()));
     // Also listen to toggle so radio buttons are covered.
-    connect(ui.buttonGroupProceed, &QButtonGroup::idPressed,
+    connect(ui.buttonGroupProceed, &QButtonGroup::idClicked,
             this, &BugzillaReportConfirmationDialog::checkProceed);
-    connect(ui.buttonGroupProceedQuestion, &QButtonGroup::idPressed,
+    connect(ui.buttonGroupProceedQuestion, &QButtonGroup::idClicked,
             this, &BugzillaReportConfirmationDialog::checkProceed);
 
     if (!m_showProceedQuestion) {
